# simpledb

./: .clang-format  .clangd  .gitignore  LICENSE  README.md  meson.build
src/: main.c
